# clicker

./: .gitignore  README.md  pyproject.toml  scratch.ipynb
clicker/: combine.py  convert_to_md.py  main.py
